[package]
name = "rust_alg_bench"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "sort_bench"
harness = false

[[bench]]
name = "copy_bench"
harness = false

[[bench]]
name = "reduce_bench"
harness = false

[[bench]]
name = "map_bench"
harness = false

[dependencies]
criterion = "0.5.1"
rand = "0.9.0-alpha.2"
rayon = "1.10.0"

